--- a/cheese_land/scss/layout/_header.scss
+++ b/cheese_land/scss/layout/_header.scss
@@ -198,6 +198,8 @@ header{
 @media screen and (max-width: 767px) {
 	.header{
 		padding: 12.5px 0;
+		max-height: 100vh;
+    	overflow-y: auto;
 		.wrapper{
 			/*width: 90%;*/
 			width: calc(100% - 30px);
