--- a/ponchiki/scss/layout/_content.scss
+++ b/ponchiki/scss/layout/_content.scss
@@ -620,7 +620,9 @@ h3{
     	height: auto;
     	z-index: 10;
     	padding: 10px 0;
-    	max-height: 100%;
+    	/*max-height: 100%;*/
+    	max-height: 100vh;
+    	overflow-y: auto;
     	&__cont{
     		min-height: auto;
     		height: auto;
@@ -638,7 +640,7 @@ h3{
     	&__nav{
     		margin: 0;
     	}
-    	.btn{
+    	.btn__cont{
     		margin: 20px auto;
     	}
 	}
