--- a/ponchiki/scss/layout/_content.scss
+++ b/ponchiki/scss/layout/_content.scss
@@ -611,7 +611,7 @@ h3{
 @media screen and (max-width: 767px) {
 	.sidebar{
 		width: 100%;
-    	position: fixed;
+    	position: absolute;
     	top: 0;
     	left: 0;
     	right: 0;
