--- a/cosmetology/css/style.css
+++ b/cosmetology/css/style.css
@@ -252,6 +252,12 @@ header {
           box-shadow: 0 -1px 0 0 #f0f0f0 inset;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 15;
+  background: #fff;
 }
 
 .header__logo span {
@@ -334,7 +340,7 @@ header {
   font: 400 16px "Roboto", sans-serif;
   color: #494949;
   position: relative;
-  padding-left: 35px;
+  padding-left: 0;
 }
 
 .header__phone:before {
@@ -342,7 +348,7 @@ header {
   width: 25px;
   height: 26px;
   position: absolute;
-  left: 0;
+  left: -35px;
   top: 50%;
   margin-top: -13px;
   background: url(../img/phone.png);
@@ -425,12 +431,6 @@ header {
 @media (max-width: 767.98px) {
   .header {
     padding: 10px 0;
-    position: fixed;
-    width: 100%;
-    left: 0;
-    top: 0;
-    z-index: 15;
-    background: #fff;
     height: 66px;
   }
   .header__nav {
