--- a/adminka/scss/layout/_content.scss
+++ b/adminka/scss/layout/_content.scss
@@ -94,6 +94,15 @@ h3{
 	transform: translateX(-100%);
 	transition: all 0.3s ease;
 	/*padding: 20px 0;*/
+	&__close{
+		display: none;
+		position: fixed;
+		right: 10px;
+		top: 10px;
+		width: 16px;
+		color: #fff;
+		z-index: 1010;
+	}
 	&__logo{
 		width: 100%;
 		padding: 20px 0;
@@ -388,6 +397,7 @@ h3{
 		padding: 0 30px;
 		position: relative;
 		list-style: none;
+		transition: all 0.3s ease;
 		&:after{
 			content: "";
 			position: absolute;
@@ -395,6 +405,7 @@ h3{
 			top: 16px;
 			border: 5px solid transparent;
 			border-left: 5px solid #999999;
+			transition: all 0.3s ease;
 		}
 		&.active{
 			background: #171820;
@@ -403,6 +414,9 @@ h3{
 				&__dropdown{
 					display: block;
 				}
+			}
+			&:after{
+				transform: rotate(90deg);
 			}
 		}
 	}
@@ -723,6 +737,7 @@ h3{
 .page{
 	background: #e9e9e9;
 	padding-bottom: 50px;
+	min-height: calc(100vh - 140px);
 	&__header{
 		padding: 10px 0;
 		margin-bottom: 50px;
@@ -1014,6 +1029,13 @@ h3{
 	border-radius: 3px;
 	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
 	width: 610px;
+	&__cont{
+		padding: 25px 40px;
+	}
+}
+#chartContainer{
+	width: 100%;
+	height: 210px;
 }
 .blheader{
 	background: #fff;
@@ -1686,12 +1708,35 @@ h3{
     	height: 30px;
     	font-size: 12px;
 	}
+	.profile{
+		width: 700px;
+		margin-left: -350px;
+		&__header{
+			margin-bottom: 15px;
+			text-align: center;
+			&.flex{
+				justify-content: center;
+			}
+			.title{
+				width: 100%;
+    			margin-bottom: 15px;
+			}
+		}
+		&__box{
+			&.flex{
+				justify-content: center;
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 767px) {
 	.sidebar{
 		&.active{
 			box-shadow: 0 0 0 9999px rgba(0,0,0,0.5);
+		}
+		&.active + .sidebar__close{
+			display: block;
 		}
 	}
 	.rightbar{
@@ -1733,6 +1778,9 @@ h3{
 		&__date{
 			width: 100%;
 			margin: 15px 0;
+			&.flex{
+				justify-content: flex-start;
+			}
 			span{
 				margin: 0 5px;
 				&:first-child{
@@ -1743,6 +1791,10 @@ h3{
 		&__input{
 			input{
 				width: 90px;
+				line-height: 30px;
+				&::placeholder{
+					line-height: 30px;
+				}
 			}
 		}
 		&__inpicon{
@@ -1840,6 +1892,60 @@ h3{
 		width: 75px;
     	height: 30px;
     	font-size: 12px;
+	}
+	.profile{
+		width: 300px;
+		margin-left: -150px;
+		top: auto !important;
+		bottom: -50px;
+		&__header{
+			margin-bottom: 15px;
+			text-align: center;
+			&.flex{
+				justify-content: center;
+			}
+			.title{
+				width: 100%;
+    			margin-bottom: 15px;
+			}
+		}
+		&__infobox{
+			width: 100%;
+			padding-top: 20px;
+		}
+		&__box{
+			&.flex{
+				justify-content: center;
+			}
+		}
+		&__info{
+			padding-right: 0;
+		}
+		&__btn{
+			width: 110px;
+		}
+		&__item{
+			width: 100%;
+			margin: 5px 0;
+			span{
+				width: 95px;
+			}
+			&_toggle{
+				&.flex{
+					justify-content: space-between;
+				}
+			}
+		}
+		&__cancel{
+			margin-right: 10px;
+    		width: 100px;
+		}
+		&__save{
+			width: 150px;
+		}
+		&__footer{
+			padding-top: 20px;
+		}
 	}
 }
 
